// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Session {
  id        String   @id
  sid       String   @unique
  data      String
  expiresAt DateTime
  User      User?    @relation(fields: [userId], references: [id])
  userId    String?
}

model User {
  id             String     @id @default(uuid())
  name           String
  email          String     @unique
  hashedPassword String
  sessions       Session[]
  role           Role       @default(USER)
  created_at     DateTime   @default(now())
  update_at      DateTime   @updatedAt
  reviews        Review[]
  wishlist       Wishlist[]
  products       Product[]
  cart           Cart[]
}

model Wishlist {
  id            String   @id @default(uuid())
  product       Product? @relation(fields: [product_id], references: [id])
  product_id    String?
  wishlist_name String   @default("default")
  user          User     @relation(fields: [user_id], references: [id])
  user_id       String
  size          String?
  color         String?

  @@unique([user_id, product_id])
}

model Category {
  id             Int             @id @default(autoincrement())
  category_name  String          @unique
  category_group CategoryGroup[]
}

model Cart {
  id         Int      @id @default(autoincrement())
  product    Product? @relation(fields: [product_id], references: [id])
  product_id String?
  quantity   Int?
  color      String?
  size       String?
  user       User     @relation(fields: [user_id], references: [id])
  user_id    String

  @@unique([user_id, product_id])
}

model Product {
  id             String          @id @default(uuid())
  title          String
  brand          String          @default("GENERIC_BRAND")
  excerpt        String
  description    String
  images         String[]
  price          Float
  discount       Int             @default(0)
  slug           String?
  wishlist       Wishlist[]
  cart           Cart[]
  reviews        Review[]
  rating         Float           @default(0)
  stock          Int
  user           User            @relation(fields: [user_id], references: [id])
  user_id        String
  created_at     DateTime        @default(now())
  category_group CategoryGroup[]
  is_deleted     Boolean         @default(false)

  // optional product metadata
  sizes    String[]
  colors   String[]
  features String[]
}

model CategoryGroup {
  id          Int      @id @default(autoincrement())
  category    Category @relation(fields: [category_id], references: [id])
  category_id Int
  product     Product  @relation(fields: [product_id], references: [id])
  product_id  String
}

model Review {
  id         String   @id @default(uuid())
  product    Product  @relation(fields: [product_id], references: [id])
  product_id String
  user       User     @relation(fields: [user_id], references: [id])
  user_id    String
  rating     Int
  comment    String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  @@unique([product_id, user_id])
}

enum Role {
  USER
  ADMIN
}
