//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Session {
  id String [pk]
  sid String [unique, not null]
  data String [not null]
  expiresAt DateTime [not null]
  User User
  userId String
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  hashedPassword String [not null]
  sessions Session [not null]
  role Role [not null, default: 'USER']
  created_at DateTime [default: `now()`, not null]
  update_at DateTime [not null]
  reviews Review [not null]
  wishlist Wishlist [not null]
  products Product [not null]
  cart Cart [not null]
}

Table Wishlist {
  id String [pk]
  product Product
  product_id String
  wishlist_name String [not null, default: 'default']
  user User [not null]
  user_id String [not null]
  size String
  color String

  indexes {
    (user_id, product_id) [unique]
  }
}

Table Category {
  id Int [pk, increment]
  category_name String [unique, not null]
  category_group CategoryGroup [not null]
}

Table Cart {
  id Int [pk, increment]
  product Product
  product_id String
  quantity Int
  color String
  size String
  user User [not null]
  user_id String [not null]

  indexes {
    (user_id, product_id) [unique]
  }
}

Table Product {
  id String [pk]
  title String [not null]
  brand String [not null, default: 'GENERIC_BRAND']
  excerpt String [not null]
  description String [not null]
  images String [not null]
  price Float [not null]
  discount Int [not null, default: 0]
  slug String
  wishlist Wishlist [not null]
  cart Cart [not null]
  reviews Review [not null]
  rating Float [not null, default: 0]
  stock Int [not null]
  user User [not null]
  user_id String [not null]
  created_at DateTime [default: `now()`, not null]
  category_group CategoryGroup [not null]
  is_deleted Boolean [not null, default: false]
  sizes String [not null]
  colors String [not null]
  features String [not null]
}

Table CategoryGroup {
  id Int [pk, increment]
  category Category [not null]
  category_id Int [not null]
  product Product [not null]
  product_id String [not null]
}

Table Review {
  id String [pk]
  product Product [not null]
  product_id String [not null]
  user User [not null]
  user_id String [not null]
  rating Int [not null]
  comment String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]

  indexes {
    (product_id, user_id) [unique]
  }
}

Enum Role {
  USER
  ADMIN
}

Ref: Session.userId > User.id

Ref: Wishlist.product_id > Product.id

Ref: Wishlist.user_id > User.id

Ref: Cart.product_id > Product.id

Ref: Cart.user_id > User.id

Ref: Product.user_id > User.id

Ref: CategoryGroup.category_id > Category.id

Ref: CategoryGroup.product_id > Product.id

Ref: Review.product_id > Product.id

Ref: Review.user_id > User.id